fix the plot button of polydisp tool

--- a/templates/base.html
+++ b/templates/base.html
@@ -318,11 +318,23 @@
             color: white;
             background-color:#EE743D ;
         }
+           .btn_border_tip:focus{
+            color: white;
+            background-color:#EE743D ;
+        }
         .btn_my_border:hover{
          color: white;
             background-color:#EE743D ;
         }
+           .btn_my_border:focus{
+         color: white;
+            background-color:#EE743D ;
+        }
         .btn_border_tip:hover{
+        color: white;
+            background-color:#EE743D ;
+        }
+           .btn_border_tip:focus{
         color: white;
             background-color:#EE743D ;
         }
