--- a/templates/data_plotter_result.html
+++ b/templates/data_plotter_result.html
@@ -16,6 +16,12 @@
             font-size: 14px
         }
 
+           .btn_plot_border:focus{
+                    color: white;
+
+            background-color: #ED5511;
+        }
+
 
            .btn_plot:hover{
                     color: white;
